--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image:url(Images/aespa-drama-members-the-giant-4k-wallpaper-uhdpaper.com-621@1@m.jpg);
+    background-image:url(/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/background.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -78,7 +78,7 @@ nav img{
 
 }
 
-.hero-btn{
+.members-button{
     display:inline-block;
     text-decoration: none;
     color: #fff;
@@ -91,10 +91,10 @@ nav img{
 
 }
 
-.hero-btn:hover{
+.members-button:hover{
     border: 1px solid #f44336;
     background: #f44336;
-    transition: 1s;
+    transition: 0.45s;
 
 }
 
@@ -114,9 +114,10 @@ nav .fa{
         height: 100vh;
         width: 200px;
         top: 0;
-        right: 0;
+        right: -200px;
         text-align: left;
         z-index: 2;
+        transition: 1s
     }
 
     nav .fa{
@@ -126,4 +127,28 @@ nav .fa{
         font-size: 22px;
         cursor: pointer;
     }
+
+    .nav-links ul{
+        padding: 14px;
+    }
+}
+
+.course{
+    width:80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+
+h1{
+    font-size: 36px;
+    font-weight: 600;
+}
+
+p{
+    color: #000000;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 10px;
 }
