--- a/style.css
+++ b/style.css
@@ -141,26 +141,70 @@ nav .fa{
 }
 
 h1{
-    font-size: 36px;
+    color: #fff;
+    font-size: 45px;
     font-weight: 600;
 }
 
 p{
-    color: #000000;
-    font-size: 14px;
+    color: #fff;
+    font-size: 20px;
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
 }
 
-.picture{
+.mem-pic{
     flex-basis: 32%;
+    width:30%;
     border-radius: 10px;
     margin-bottom: 30px;
     position: relative;
     overflow: hidden;
 }
 
-.picture img{
-    width: 100%;
+.mem-pic img{
+    display:block;
 }
+
+.layer{
+    background: transparent;
+    position: absolute; 
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    transition: 0.5s;
+}
+
+.layer:hover{
+    background: rgba(226,0,0,0.7);
+}
+
+.layer h3{
+    width: 100%;
+    font-weight: 500;
+    color: #fff;
+    font-size: 26px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    position:absolute;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.layer:hover h3{
+    bottom:49%;
+    opacity: 1;
+}
+
+.members{
+    min-height: 100vh;
+    width: 100%;
+    background-image:url(/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/city.png);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
