--- a/style.css
+++ b/style.css
@@ -226,6 +226,8 @@ h1 {
     font-family: 'Montserrat', sans-serif;
 }
 
+
+
 .disco-background{
     background-color:black;
     position:relative;
@@ -246,6 +248,14 @@ h1 {
     
 }
 
-.albumsname{
-    
+.albumsname h1{
+
+    position: absolute;
+    margin: auto;
+    top: 97%;
+    left: 48%;
+    transform: translate(-50%, -50%);
+    font-weight: 200;
+    font-family: 'Montserrat', sans-serif;
+
 }
