--- a/style.css
+++ b/style.css
@@ -264,7 +264,6 @@ nav .fa{
 
     position: absolute;
     margin: auto;
-    top: 50%;
     left: 48%;
     transform: translate(-50%, -50%);
     font-weight: 300;
@@ -275,19 +274,32 @@ nav .fa{
 }
 
 .socialsbg{
-    background-color: white;
+    background-color: black;
 
 }
 
 .socialsicon {
-text-align: center; /* Align icons to the center */
-font-size: 20px; /* Adjust the font size of icons */
-padding: 50px;
-display: inline-block;
-margin: 0 10px 0 0;
- 
+    text-align: center; /* Align icons to the center */
+    font-size: 20px; /* Adjust the font size of icons */
+    padding: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Center items horizontally */
+
 }
+
+.socialsicon a {
+    margin: 0 20px; /* Adjust the margin between icons */
+    transition: color 0.3s ease;
+  }
 
 .socialsbg h2{
     text-align:center;
+    font-size: 30px;
+    color:white;
 }
+
+  
+  .socialsicon a:hover {
+    color: #ffffff;
+  }
