--- a/style.css
+++ b/style.css
@@ -278,6 +278,11 @@ nav .fa{
 
 }
 
+.socialsbg1{
+    background-color: black;
+
+}
+
 .socialsicon {
     text-align: center; /* Align icons to the center */
     font-size: 20px; /* Adjust the font size of icons */
@@ -294,12 +299,34 @@ nav .fa{
   }
 
 .socialsbg h2{
-    text-align:center;
+    text-align: center;
     font-size: 30px;
-    color:white;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+}
+
+.socialsbg1 h2{
+    text-align: center;
+    font-size: 30px;
+    color: white;
+    font-family: 'Poppins', sans-serif;
 }
 
   
-  .socialsicon a:hover {
+.socialsicon a:hover {
     color: #ffffff;
-  }
+}
+
+.merchandisepic {
+    position: relative;
+    display: flex;
+    flex-direction: row; /* Arrange items in a row (one per row) */
+    justify-content: center; /* Center the items horizontally */
+    align-items: center; /* Center the items vertically */
+}
+
+.merchandisepic img {
+    height: 500px;
+    width: 500px;
+    margin: 0 20px; /* Adjust the margin between images */
+}
