--- a/style.css
+++ b/style.css
@@ -320,13 +320,48 @@ nav .fa{
 .merchandisepic {
     position: relative;
     display: flex;
-    flex-direction: row; /* Arrange items in a row (one per row) */
+    flex-direction: column; /* Arrange items in a column (one below the other) */
     justify-content: center; /* Center the items horizontally */
     align-items: center; /* Center the items vertically */
 }
 
-.merchandisepic img {
+.image-container {
+    display: flex; /* Images will be in a row */
+}
+
+.image-container img {
     height: 500px;
     width: 500px;
-    margin: 0 20px; /* Adjust the margin between images */
+    margin-right: 20px; /* Adjust the margin between images */
+}
+
+.text-container {
+    display: flex; /* Text will be in a row */
+    flex-direction: row; /* Arrange text in a row */
+    align-items: center; /* Center the items vertically in the row */
+    margin-bottom: 20px; /* Add margin between text row and button */
+   
+}
+
+
+.description {
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    padding: 15px;
+    margin-right: 32px; 
+    font-size: 21px;
+
+}
+
+.buy-now-btn {
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 20px;
+    
 }
