--- a/style.css
+++ b/style.css
@@ -355,13 +355,24 @@ nav .fa{
 
 }
 
+
 .buy-now-btn {
     background-color: black;
     color: white;
-    padding: 10px 20px;
+    padding: 18px 40px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 15px;
+    display:flex;
+    outline: 1px solid white;
+    transition: color 0.3s, outline-color 0.3s;
     
 }
+
+.buy-now-btn:hover {
+    color:  rgba(237,29,36,0.7);
+    outline-color: rgba(237,29,36,0.7);
+ 
+}
+
