changed social padding

--- a/style.css
+++ b/style.css
@@ -316,6 +316,7 @@ nav .fa{
     font-size: 25px;
     color: white;
     font-family: 'Poppins', sans-serif;
+    padding: 20px;
 }
 
 .socialsbg1 h2{
